fix: resolve all 25 SonarQube issues — hardcoded secrets, generic exceptions, duplicated literals, test cleanup
- Externalize JWT secret to env var / Spring property (jwt.secret)
- Externalize seeder passwords to env vars, skip if unset
- Replace RuntimeException with EntityNotFoundException, UncheckedIOException, etc.
- Replace .collect(Collectors.toList()) with .toList()
- Extract duplicated string literals into constants
- Add SonarCloud Maven configuration to pom.xml
- Remove unused imports and join assertion chains in tests